update contract
